--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    dddd
+   Welcome to  WatchWise 
+   fix fix add add 
     
 </body>
 </html>
